# MyGitVersion

./: .gitignore  README.md
mygitversion/: pyproject.toml
mygitversion/mygitversion/: mygitversion.py  utilities.py
mygitversion/mygitversion/.mygitversion/: COMMIT_MSG  before_logs.json  index
mygitversion/mygitversion/.mygitversion/local/: utilities.py
mygitversion/mygitversion/.mygitversion/remote/: utilities.py
